[ADD] Validation per service and a given time

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
         "typeinfo": "cpp",
         "fstream": "cpp",
         "iosfwd": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "future": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
